Version next
-------------

  fix
   - correct dependency to librp-utils-core >= 0.2.3

  change
   - use system trust chain if no trust chain is already set

Version 5.4.1
-------------

  feature
   - add 'host=' parameter in RPC URLs for setting or removing
     host name to check in TLS

  fix
   - support of mTLS when mbedTLS is the server
   - memory overflow when broadcasting events

  change
   - enforce afb-ev-mgr protection for concurrency

Version 5.4.0
-------------

  feature
   - support of LLEXT in Zephyr
   - support of Mbedtls for RPC
   - support of TLS or mTLS for RPC
   - allow global setting of TLS material

  fix
   - correctly handle NULL listener in afb-stub-rpc
   - handle correctly concurrent accesses in afb-stub-rpc
   - refactor of afb-thread

  change
   - remove of obsolete function afb_sched_call (use afb_sig_monitor_run)

Version 5.3.10
--------------

  fix
   - fix includes of libafb-config.h in libafbcli

Version 5.3.9
-------------

  fix
   - fix include of afb-vcomm

Version 5.3.8
-------------

  change
   - make timerfd as optional
   - allows minimal implementation of locale-root
   - allows use of poll instead of epoll in event loop


  feature
   - compatibility to Zephyr OS

  fix
   - bug #7594
   - big RPC buffers
   - TLS for RPC

Version 5.3.7
-------------

  change
   - RPC transmit type's name of not predefined types
   - RPC handle correctly reception of incomplete buffers

Version 5.3.6
-------------

  change
   - serialize pushing events

Version 5.3.5
-------------

  change
   - use splitted librp-utils:
     librp-utils-core, librp-utils-file, librp-utils-json-c

Version 5.3.4
-------------

  fixes
   - improve conversion from stringz to json and json-c

  change
   - make libmagic optional

Version 5.3.3
-------------

  change
   - propagate maximum payload length of websockets

Version 5.3.2
-------------

  fixes
   - release event manager when sync_cb must wait

Version 5.3.1
-------------

  fixes